; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Neo6/extr_Neo6.c_NeoShutdown.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Neo6/extr_Neo6.c_NeoShutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ctx = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NeoShutdown() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @ctx, align 8
  %2 = icmp eq %struct.TYPE_3__* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %10

4:                                                ; preds = %0
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @ctx, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = call i32 @NeoFreeStatus(i32* %6)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @ctx, align 8
  %9 = call i32 @NeoZero(%struct.TYPE_3__* %8, i32 4)
  br label %10

10:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @NeoFreeStatus(i32*) #1

declare dso_local i32 @NeoZero(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
